update edm template (bonbouton)

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         p {
             display: block;
-            margin: 13px 0;
+            margin: 6px 0;
         }
     </style>
     <style type="text/css">
@@ -90,7 +90,7 @@
                                             <tr>
                                                 <td valign="middle" align="left" width="225"
                                                     style="width:225px; padding-top: 0; padding-bottom: 0; padding-right: 0; padding-left: 0;background-color:#3373b8; text-align:left;">
-                                                    <a href="#" target="_blank" style="text-decoration: none;">
+                                                    <a href="https://www.bonbouton.com/" target="_blank" style="text-decoration: none;">
                                                         <img src="https://www.upsieutoc.com/images/2019/08/21/Layer-1.png" width="60"
                                                             style="vertical-align: middle; width: 60px; display:inline-block;line-height: 0; padding-top:0; padding-left:0; padding-right:0; padding-bottom: 0;border:0; outline:none; text-decoration: none;-ms-interpolation-mode:bicubic;"
                                                             alt="">
@@ -98,20 +98,28 @@
                                                 </td>
                                                 <td valign="middle" align="right" width="225"
                                                     style="width:225px;padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;text-align: right;">
-                                                    <a href="#" target="_blank" title="Twitter"
-                                                        style="text-decoration: none; display: inline-block;">
-                                                        <img align="left" src="https://www.upsieutoc.com/images/2019/08/21/twitter.png" border="0"
-                                                            style="width: 25px;display: block;line-height: 0;padding-top:0;padding-bottom:0;padding-right:0;padding-left:0; border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;">
-                                                    </a>
-                                                    <a href="#" target="_blank" title="Instagram"
-                                                        style="text-decoration: none; display: inline-block;">
-                                                        <img align="left" src="https://www.upsieutoc.com/images/2019/08/21/instagram.png" border="0"
-                                                            style="width: 25px;display: block;line-height: 0;padding-top:0;padding-bottom:0;padding-right:0;padding-left:0; border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;margin-left:10px; margin-right:10px;">
-                                                    </a>
-                                                    <a href="#" target="_blank" title="Linkedin"
-                                                        style="text-decoration: none; display: inline-block;">
-                                                        <img align="left" src="https://www.upsieutoc.com/images/2019/08/21/linkedin.png" border="0"
+                                                     <a href="https://www.linkedin.com/company/bonbouton/" target="_blank" title="Linkedin"
+                                                        style="text-decoration: none;">
+                                                        <img align="right" src="https://www.upsieutoc.com/images/2019/08/22/linkedin-in-brands-white.png" border="0"
                                                             style="width: 24px;display: block;line-height: 0;padding-top:0;padding-bottom:0;padding-right:0;padding-left:0; border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;">
+                                                    </a>
+                                                    <a href="#" style="text-decoration: none;">
+                                                    <img align="right" src="https://www.upsieutoc.com/images/2019/08/22/transparent01.png" border="0"
+                                                        style="width: 10px;display: block;line-height: 0;padding-top:0;padding-bottom:0;padding-right:0px;padding-left:0px; border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;">
+                                                    </a> 
+                                                    <a href="https://www.instagram.com/bonbouton/" target="_blank" title="Instagram"
+                                                        style="text-decoration: none;">
+                                                        <img align="right" src="https://www.upsieutoc.com/images/2019/08/22/instagram-brands-white.png" border="0"
+                                                            style="width: 25px;display: block;line-height: 0;padding-top:0;padding-bottom:0;padding-right:0px;padding-left:0px; border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;">
+                                                    </a> 
+                                                    <a href="#" style="text-decoration: none;">
+                                                    <img align="right" src="https://www.upsieutoc.com/images/2019/08/22/transparent01.png" border="0"
+                                                        style="width: 10px;display: block;line-height: 0;padding-top:0;padding-bottom:0;padding-right:0px;padding-left:0px; border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;">
+                                                    </a>                                                
+                                                    <a href="https://twitter.com/Bonbouton" target="_blank" title="Twitter"
+                                                        style="text-decoration: none;">
+                                                        <img align="right" src="https://www.upsieutoc.com/images/2019/08/22/twitter-brands-white.png" border="0"
+                                                            style="width: 27px;display: block;line-height: 0;padding-top:0;padding-bottom:0;padding-right:0;padding-left:0; border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;">
                                                     </a>
                                                 </td>
                                             </tr>
@@ -248,35 +256,54 @@
                             </tr>
                             <tr>
                                 <td valign="top" align="center" width="600px" height="30px" style="width:600px; height:30px; padding-top:0;padding-left:0; padding-right: 0; padding-bottom: 0;text-align: center;">
-                                    <a href="#" style="font-family:Arial, Helvetica, sans-serif; font-size:14px; line-height: 20px;text-decoration: none; display:block; color:#000000;">
-                                        415 Madison Ave, 4th floor New York, NY 10017
-                                    </a>
-                                    <a href="#" style="font-family:Arial, Helvetica, sans-serif; font-size:14px;line-height: 20px; text-decoration: none; display:block; color:#000000;">
-                                        +1 646.457.4574 | contact@bonbouton.com
-                                    </a>
+                                    <p>
+                                        <a href="#" style="font-family:Arial, Helvetica, sans-serif; font-size:14px; line-height: 20px;text-decoration: none; display:block; color:#000000;">
+                                            415 Madison Ave, 4th floor New York, NY 10017
+                                        </a>
+                                    </p>
+                                    <p>
+                                        <a href="tel:+1 646.457.4574" target="_blank" style="font-family:Arial, Helvetica, sans-serif; font-size:14px;line-height: 20px; text-decoration: none; color:#000000;">
+                                            +1 646.457.4574
+                                        </a>
+                                        <a href="mailto:contact@bonbouton.com" target="_blank" style="font-family:Arial, Helvetica, sans-serif; font-size:14px;line-height: 20px; text-decoration: none; color:#000000;">
+                                            | contact@bonbouton.com
+                                       </a>
+                                    </p>
                                 </td>
                             </tr>
                             <tr>
-                                <td valign="top" align="center" width="600px" height="30px" style="width:600px; height:30px; padding-top:10px;padding-left:0; padding-right: 0; padding-bottom: 0px;text-align: center;">
-                                    <a href="#" target="_blank" title="Twitter" style="text-decoration: none; display: inline-block;">
-                                        <img align="left" src="https://www.upsieutoc.com/images/2019/08/21/twitter_black.png" border="0"
-                                        style="width: 25px;display: block;line-height: 0;padding-top:0;padding-bottom:0;padding-right:0;padding-left:0; border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;">
+                                <td valign="top" align="center" width="600px" height="30px" style="width:600px; height:30px; padding-top:0px;padding-left:0; padding-right: 0; padding-bottom: 0px;text-align: center;">
+                                    <a href="https://twitter.com/Bonbouton" target="_blank" title="Twitter" style="text-decoration: none;">
+                                        <img  src="https://www.upsieutoc.com/images/2019/08/22/twitter-brands-black.png" border="0"
+                                        style="width: 27px;line-height: 0;padding-top:0;padding-bottom:0;padding-right:0;padding-left:0; border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;">
                                     </a>
-                                    <a href="#" target="_blank" title="Instagram" style="text-decoration: none; display: inline-block;">
-                                        <img align="left" src="https://www.upsieutoc.com/images/2019/08/21/instagram_black.png" border="0"
-                                        style="width: 25px;display: block;line-height: 0;padding-top:0;padding-bottom:0;padding-right:0;padding-left:0; border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;margin-left:10px; margin-right:10px;">
+                                    <a href="#" style="text-decoration: none;">
+                                         <img src="https://www.upsieutoc.com/images/2019/08/22/transparent01.png" border="0" style="width: 5px;line-height: 0;padding-top:0;padding-bottom:0;padding-right:0;padding-left:0; border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;">
+                                    </a> 
+                                    <a href="https://www.instagram.com/bonbouton/" target="_blank" title="Instagram" style="text-decoration: none;">
+                                        <img  src="https://www.upsieutoc.com/images/2019/08/22/instagram-brands-black.png" border="0"
+                                        style="width: 25px;line-height: 0;padding-top:0;padding-bottom:0;padding-right:0px;padding-left:0px; border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;">
                                     </a>
-                                    <a href="#" target="_blank" title="Linkedin" style="text-decoration: none; display: inline-block;">
-                                        <img align="left" src="https://www.upsieutoc.com/images/2019/08/21/linkedin_black.png" border="0"
-                                            style="width: 24px;display: block;line-height: 0;padding-top:0;padding-bottom:0;padding-right:0;padding-left:0; border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;">
+                                    <a href="#" style="text-decoration: none;">
+                                        <img src="https://www.upsieutoc.com/images/2019/08/22/transparent01.png" border="0" style="width: 5px;line-height: 0;padding-top:0;padding-bottom:0;padding-right:0;padding-left:0; border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;">
+                                    </a> 
+                                    <a href="https://www.linkedin.com/company/bonbouton/" target="_blank" title="Linkedin" style="text-decoration: none;">
+                                        <img src="https://www.upsieutoc.com/images/2019/08/22/linkedin-in-brands-black.png" border="0"
+                                            style="width: 24px;line-height: 0;padding-top:0;padding-bottom:0;padding-right:0;padding-left:0; border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;">
                                     </a>
                                 </td>
                             </tr>
                             <tr>
                                 <td valign="top" align="center" width="600px" height="30px" style="width:600px; height:30px; padding-top:0;padding-left:0; padding-right: 0; padding-bottom: 0;text-align: center;">
-                                    <p style="font-family:Arial, Helvetica, sans-serif; font-size:12px; line-height: 20px;text-decoration: none; display:block; color:#000000;">
-                                        Help center - Unsubscribe - Privacy policy
-                                    </p>
+                                    <a href="#" style="font-family:Arial, Helvetica, sans-serif; font-size:12px; line-height: 20px;text-decoration: none; display:inline; color:#000000;">
+                                        Help center
+                                    </a>
+                                    <a href="#" style="font-family:Arial, Helvetica, sans-serif; font-size:12px; line-height: 20px;text-decoration: none; display:inline; color:#000000;">
+                                        - Unsubscribe -
+                                    </a>
+                                    <a href="#" style="font-family:Arial, Helvetica, sans-serif; font-size:12px; line-height: 20px;text-decoration: none; display:inline; color:#000000;">
+                                         Privacy policy
+                                    </a>
                                 </td>
                             </tr>
                         </table>
